# nix-desktop

./: README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  hyprland.conf
modules/cli/: default.nix  dev.nix  git.nix  nu.nix  tools.nix
modules/cli/helix/: config.toml  default.nix  languages.toml
modules/cli/nvim/: default.nix  init.lua  plugins.nix
modules/cli/nvim/lua/plugins/: lsp.lua  misc.lua  ui.lua
modules/cli/yazi/: default.nix
modules/cli/zellij/: config.kdl  default.nix
modules/cli/zsh/: alias.nix  default.nix
modules/cli/zsh/starship/: default.nix  starship.toml
modules/gui/: alacritty.nix  default.nix  discord.nix  tools.nix  wave.nix
modules/gui/ghostty/: config  default.nix
modules/gui/wezterm/: default.nix  keybinds.lua  wezterm.lua
modules/hyprland/: default.nix  hyprland.conf
modules/hyprland/mako/: default.nix
modules/hyprland/waybar/: config  default.nix
modules/hyprland/waybar/scripts/: flake.nix
modules/hyprland/waybar/scripts/waybar-wtr/: pyproject.toml
modules/hyprland/waybar/scripts/waybar-wtr/waybar_wtr/: waybar-wtr.py
modules/hyprland/wofi/: default.nix
