[project]
name = "waybar-wtr"
version = "0.1.0"
description = ""
authors = [
    {name = "kirisu25",email = "kirisu25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
waybar-wtr = "waybar_wtr.waybar-wtr:main"
